// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-split-styles Dynamic styles should stay in \`style\`: Dynamic styles should stay in \`style\` 1`] = `
"
<div style={{color: a ? \\"red\\" : \\"green\\"}} />

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

<div style={{
  color: a ? \\"red\\" : \\"green\\"
}} />;
"
`;

exports[`babel-plugin-split-styles Extract static from dynamic: Extract static from dynamic 1`] = `
"
<div style={{background: \\"blue\\", color: a ? \\"red\\" : \\"green\\"}} />

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

<div css={{
  background: \\"blue\\"
}} style={{
  color: a ? \\"red\\" : \\"green\\"
}} />;
"
`;

exports[`babel-plugin-split-styles Ignore bound jsx elements: Ignore bound jsx elements 1`] = `
"
const div = () => {}; <div style={{some: \\"other\\", stuff}} />

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

const div = () => {};

<div style={{
  some: \\"other\\",
  stuff
}} />;
"
`;

exports[`babel-plugin-split-styles Ignore non identifier as element name: Ignore non identifier as element name 1`] = `
"
<animated.div style={{some: \\"other\\", stuff}} />

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

<animated.div style={{
  some: \\"other\\",
  stuff
}} />;
"
`;

exports[`babel-plugin-split-styles Only static css: Only static css 1`] = `
"
<div style={{color: \\"green\\"}} />

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

<div css={{
  color: \\"green\\"
}} />;
"
`;

exports[`babel-plugin-split-styles Should bail if \`css\` property exists: Should bail if \`css\` property exists 1`] = `
"
<div css={{}} style={{background: \\"blue\\"}} />

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

<div css={{}} style={{
  background: \\"blue\\"
}} />;
"
`;

exports[`babel-plugin-split-styles Should bail on non object expression: Should bail on non object expression 1`] = `
"
<div style={a} />

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

<div style={a} />;
"
`;

exports[`babel-plugin-split-styles Should work with nested object: Should work with nested object 1`] = `
"
<div style={{color: \\"green\\", \\"&\\": { \\":hover\\": { color: \\"blue\\"}}}} />

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

<div css={{
  color: \\"green\\",
  \\"&\\": {
    \\":hover\\": {
      color: \\"blue\\"
    }
  }
}} />;
"
`;
